Rename impulse url properties
